k8s/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: financial-control
  namespace: financial-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
spec:
  ingressClassName: nginx
  rules:
    - host: finance.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: { name: financial-backend, port: { number: 3000 } }
          - path: /
            pathType: Prefix
            backend:
              service: { name: financial-frontend, port: { number: 80 } }
